--- a/Web/ClientApp/src/app/venta/venta-registro/venta-registro.component.html
+++ b/Web/ClientApp/src/app/venta/venta-registro/venta-registro.component.html
@@ -80,7 +80,7 @@
                 </button>
 
                 <button class="btn btn-lg btn-primary btn-block text-uppercase" type="submit" (click)="onSubmit()">Registrar</button>
-                <button class="btn btn-lg btn-secondary btn-block text-uppercase" type="reset">Cancelar</button>
+                <button class="btn btn-lg btn-secondary btn-block text-uppercase" type="reset" (click)="onReset()">Cancelar</button>
                 
                 <!--<button class="btn btn-lg btn-google btn-block text-uppercase" type="submit"><i class="fab fa-google mr-2"></i> Sign in with Google</button>
                 <button class="btn btn-lg btn-facebook btn-block text-uppercase" type="submit"><i class="fab fa-facebook-f mr-2"></i> Sign in with Facebook</button>
